[package]
name = "treepir-server"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
stellar-strkey = "0.0.18"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rocksdb = "0.22"
hex = "0.4"
stellar-rpc-client = "27"
stellar-xdr = { version = "27", features = ["base64", "serde", "serde_json"] }
dotenvy = "0.15"
anyhow = "1"
treepir = { path = "../treepir" }

axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
bincode = "1.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = "1"
